# CX-Circus-Tower

./: .gitignore  CMakeLists.txt  README.md
data/: circus_people_data.txt
include/: file_data_parser.h  person.h  tower_builder.h
src/: file_data_parser.cpp  main.cpp  person.cpp  tower_builder.cpp
tests/: CMakeLists.txt  test_file_data_parser.cpp  test_person.cpp  test_tower_builder.cpp
